🩹 Updated Perceptron class and updated jupyter notebooks files

--- a/Perceptron_full_process.ipynb
+++ b/Perceptron_full_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "inputs_pre = [[0, 0], [0, 1], [1, 0], [1, 1]]\n",
-    "output = [0, 1, 1, 1]"
+    "outputs = [0, 1, 1, 1]"
    ]
   },
   {
@@ -33,14 +33,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sachant que chaque couple de bits de notre input comporte deux éléments que l'on appelera A et B, on peut en déduire que notre perceptron aura 2 entrées et donc deux poids à déterminer.\n",
+    "Sachant que chaque couple de bits de notre input comporte deux éléments que l'on appellera A et B, on peut en déduire que notre perceptron aura 2 entrées et donc deux poids à déterminer.\n",
     "\n",
     "Le perceptron dépend également d'une fonction d'activation qui est, dans notre cas, la fonction Heaviside dont la représentation est la suivante"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2dcee298730>]"
+       "[<matplotlib.lines.Line2D at 0x1a450963fa0>]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -85,15 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_features = 2\n",
-    "bias = random.random()\n",
-    "training_factor = 0.1\n",
-    "training_loop = 1000\n",
-    "weights = [random.random() for x in range(nb_features)]"
+    "nb_features = len(inputs_pre[0])\n",
+    "bias = 0\n",
+    "training_factor = 0.01\n",
+    "nb_iter = 2_000\n",
+    "weights = [0 for x in range(nb_features)]"
    ]
   },
   {
@@ -102,13 +102,13 @@
    "source": [
     "Nous allons maintenant devoir modifier notre liste de poids et nos inputs pour prendre en compte le biais de la fonction d'activation.\n",
     "Notre fonction d'activation peut être représentée de la manière suivante : \n",
-    "Si la somme du produit des poids avec les input est supérieurs au biais, alors notre neurone s'active. On peut donc le matérialiser de la façon suivante :\n",
+    "Si la somme du produit des poids avec les input est supérieure au biais, alors notre neurone s'active. On peut donc le matérialiser de la façon suivante :\n",
     "`x1*w1 + x2*w2 >= biais` ce qui est équivalent à `1*(-biais) + x1*w1 + x2*w2 >= 0`. On se retrouve donc avec un input ainsi qu'un poids en plus."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
      "output_type": "stream",
      "text": [
       "[[1, 0, 0], [1, 0, 1], [1, 1, 0], [1, 1, 1]]\n",
-      "[-0.3905460325255138, 0.46851447339923225, 0.5629924530538118]\n"
+      "[0, 0, 0]\n"
      ]
     }
    ],
@@ -139,26 +139,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Essayons maintenant de voir ce que notre neurone retourne lorsque nous lui appliquons l'input [0, 1] sans l'avoir entrainé, c'est à dire, sans avoir modifié nos poids de manière à ce que notre neurone soit entrainé à reconnaitre la logique."
+    "Essayons maintenant de voir ce que notre neurone retourne lorsque nous lui appliquons l'input [0, 1] sans l'avoir entraîné, c'est-à-dire, sans avoir modifié nos poids de manière à ce que notre neurone soit entraîné à reconnaître la logique."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def guess (input, weights):\n",
-    "   input.insert(0, -1)\n",
-    "   neurone_sum = 0\n",
-    "   for i in range(nb_features):\n",
-    "      neurone_sum += input[i]*weights[i]\n",
-    "   return activation(neurone_sum)"
+    "   input.insert(0, 1)\n",
+    "   sum_val = np.sum(np.multiply(input, weights))\n",
+    "   return activation(sum_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -177,12 +175,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notre neurone retourne la valeur `1` ce qui correspond à l'output de la fonction OR sur les bits 0 et 1. Néanmoins, cela ne veut pas dire que notre neurone est entrainé car si l'on teste notre neurone avec l'input 0 et 0, le neurone est supposé retourné 0. Voyons ce qu'il nous retourne."
+    "Notre neurone retourne la valeur `1` ce qui correspond à l'output de la fonction OR sur les bits 0 et 1. Néanmoins, cela ne veut pas dire que notre neurone est entraïné, car si l'on teste notre neurone avec l'input 0 et 0, le neurone est supposé retourner 0. Voyons ce qu'il nous retourne."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -201,58 +199,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On voit que la valeur retournée cette fois-ci ne correspond pas à la valeur attendue. Nous allons donc devoir enrtainer notre neurone pour que les valeurs des poids permettent de faire correspondre nos inputs et nos outputs.\n",
+    "On voit que la valeur retournée cette fois-ci ne correspond pas à la valeur attendue. Nous allons donc devoir entaïner notre neurone pour que les valeurs des poids permettent de faire correspondre nos inputs et nos outputs.\n",
     "\n",
     "Pour ce faire, nous allons devoir appliquer la formule suivante sur les valeurs de nos poids : `weight_new = weight_old + training_factor * (output_attendu - output_obtenu) * input`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights_train = weights\n",
+    "for k in range(nb_iter):\n",
+    "   output_list = []\n",
+    "   for i in range(len(inputs)):\n",
+    "      sum_val = np.sum(np.multiply(inputs[i], weights))\n",
+    "      output_tmp = activation(sum_val)\n",
     "\n",
-    "for i in range(training_loop):\n",
-    "   for j in range(len(inputs_train)):\n",
-    "      for k in range(nb_features+1):\n",
-    "         training_guess = guess([1] + inputs_train[j], weights_train)\n",
-    "         weights_train[k] = weights_train[k] + (training_factor * (output_train[j] - training_guess) * inputs_train[j][k])"
+    "      for j in range(nb_features + 1):\n",
+    "         weights[j] += (\n",
+    "            training_factor\n",
+    "            * (outputs[i] - output_tmp)\n",
+    "            * inputs[i][j]\n",
+    "         )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-100.39054603252409, -99.53148552659938, 100.56299245305237]\n"
+      "[-0.01, 0.01, 0.01]\n"
      ]
     }
    ],
    "source": [
-    "print(weights_train)"
+    "print(weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "0 OR 0 -> 0\n",
+      "0 OR 1 -> 1\n",
+      "1 OR 0 -> 1\n",
+      "1 OR 1 -> 1\n"
      ]
     }
    ],
    "source": [
-    "print(guess([0, 0], weights_train))"
+    "print(f\"0 OR 0 -> {guess([0, 0], weights)}\")\n",
+    "print(f\"0 OR 1 -> {guess([0, 1], weights)}\")\n",
+    "print(f\"1 OR 0 -> {guess([1, 0], weights)}\")\n",
+    "print(f\"1 OR 1 -> {guess([1, 1], weights)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Après l'entraînement de notre neurone, on remarque bien que les résultats retournés correspondent à nos attentes."
    ]
   }
  ],
