💬 Updated explanations in full process notebook

--- a/Perceptron_full_process.ipynb
+++ b/Perceptron_full_process.ipynb
@@ -103,7 +103,7 @@
     "Nous allons maintenant devoir modifier notre liste de poids et nos inputs pour prendre en compte le biais de la fonction d'activation.\n",
     "Notre fonction d'activation peut être représentée de la manière suivante : \n",
     "Si la somme du produit des poids avec les input est supérieure au biais, alors notre neurone s'active. On peut donc le matérialiser de la façon suivante :\n",
-    "`x1*w1 + x2*w2 >= biais` ce qui est équivalent à `1*(-biais) + x1*w1 + x2*w2 >= 0`. On se retrouve donc avec un input ainsi qu'un poids en plus."
+    "`x1*w1 + x2*w2 >= biais` ce qui est équivalent à `1*(-biais) + x1*w1 + x2*w2 >= 0`. Or, la valeur du biais n'étant pas fixe et sera modifiée lors de l'entraînement, nous pouvons alors réécrire notre inéquation de la manière suivante : `1*biais + x1*w1 + x2*w2 >= 0`.On se retrouve donc avec un input ainsi qu'un poids en plus."
    ]
   },
   {
