🩹 Updated variable order

--- a/Perceptron_full_process.ipynb
+++ b/Perceptron_full_process.ipynb
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a450963fa0>]"
+       "[<matplotlib.lines.Line2D at 0x1e46b203fd0>]"
       ]
      },
      "execution_count": 4,
@@ -91,8 +91,6 @@
    "source": [
     "nb_features = len(inputs_pre[0])\n",
     "bias = 0\n",
-    "training_factor = 0.01\n",
-    "nb_iter = 2_000\n",
     "weights = [0 for x in range(nb_features)]"
    ]
   },
@@ -113,7 +111,7 @@
    "outputs": [],
    "source": [
     "inputs = [[1, a, b] for a, b in inputs_pre]\n",
-    "weights.insert(0, -bias)"
+    "weights.insert(0, bias)"
    ]
   },
   {
@@ -210,6 +208,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "training_factor = 0.01\n",
+    "nb_iter = 2_000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for k in range(nb_iter):\n",
     "   output_list = []\n",
     "   for i in range(len(inputs)):\n",
@@ -226,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
